Freestyle + Cycles panoramic camera not compatible, renders are incorrect #41800

Closed
opened 2014-09-12 11:58:19 +02:00 by Zsolt Stefan · 8 comments

System Information
Windows 7, NVIDIA Quadro 2000

Blender Version
Broken: 2.71

Short description of error
Freestyle renders normal perspective view, even when the camera is set to panoramic (with Cycles). This creates an incorrect render where lines and geometry don't match up.
AFAIK Freestyle doesn't support panoramic view, but this is not communicated to the user. Freestyle renders normally, there is no warning, and the user ends up with an incorect image.

Exact steps for others to reproduce the error

  • Switch to cycles
  • set camera to panoramic
  • enable freestyle, (settings unimportant)
  • render any geometry
  • lines and geoemtry in render are mismatched.
**System Information** Windows 7, NVIDIA Quadro 2000 **Blender Version** Broken: 2.71 **Short description of error** Freestyle renders normal perspective view, even when the camera is set to panoramic (with Cycles). This creates an incorrect render where lines and geometry don't match up. AFAIK Freestyle doesn't support panoramic view, but this is not communicated to the user. Freestyle renders normally, there is no warning, and the user ends up with an incorect image. **Exact steps for others to reproduce the error** - Switch to cycles - set camera to panoramic - enable freestyle, (settings unimportant) - render any geometry - lines and geoemtry in render are mismatched.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan
Tamito Kajiyama was assigned by Bastien Montagne 2014-09-12 12:02:38 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Not sure this is bug or todo, Tamito ?

Not sure this is bug or todo, Tamito ?

Freestyle does not support panoramic cameras. For the BI there is a check to reject panoramic cameras. I will look into the code where to put a similar check for Cycles.

Freestyle does not support panoramic cameras. For the BI there is a check to reject panoramic cameras. I will look into the code where to put a similar check for Cycles.

This issue was referenced by e5b2e9cdd3

This issue was referenced by e5b2e9cdd34f071b059a166bdbbc13eeca6bb4dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e5b2e9cdd3.

Closed by commit e5b2e9cdd3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41800
No description provided.