Fix T41800: Freestyle + Cycles panoramic camera not compatible, renders are incorrect.